--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -48,7 +48,7 @@ jobs:
         run: |
             set -x
             owner="domger-ops"
-            branch="main"
+            branch="master"
             git config --global user.email ${{ secrets.GIT_EMAIL }}
             git config --global user.name ${{ secrets.GIT_USERNAME }}
             git checkout $branch
